# egypt-solver

./: .gitignore  Cargo.toml  README.md  adjacents.py  dist.py
problem/: 00-0.in  00-1.in  00-2.in  00-3.in  00-4.in  00-5.in  01-0.in  01-1.in  01-2.in  01-3.in  01-4.in  01-5.in  02-0.in  02-1.in  02-2.in  02-3.in  02-4.in  02-5.in  03-0.in  03-1.in  03-2.in  03-3.in  03-4.in  03-5.in  04-0.in  04-1.in  04-2.in  04-3.in  04-4.in  04-5.in  05-0.in  05-1.in  05-2.in  05-3.in  05-4.in  05-5.in  06-0.in  06-1.in  06-2.in  06-3.in  (+74 more)
rooms/: rooms-0.txt  rooms-1.txt  rooms-2.txt
src/: bfs.rs  board.rs  genetic.rs  ida.rs  iddfs.rs  lib.rs  main-bfs.rs  main-genetic.rs  main-ida.rs  main-iddfs.rs  main-optimize.rs  main-roomorder.rs  util.rs
tests/: bfs-iddfs-ida.rs
